--- a/app/src/main/res/layout/activity_postlist.xml
+++ b/app/src/main/res/layout/activity_postlist.xml
@@ -7,6 +7,7 @@
     tools:context=".PostactivityList">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
