--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddPostActivity">
+    tools:context=".Activities.AddPostActivity">
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -14,6 +14,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginStart="6dp"
         android:scaleType="fitCenter"
+        android:background="#ffffff"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
