--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_add"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/baseline_add_white_24"
         android:title="Add Title"
         app:showAsAction="always"/>
 
