--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -7,9 +7,9 @@
     tools:context=".Activities.AddPostActivity">
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="373dp"
-        android:layout_height="211dp"
+        android:id="@+id/Post_Image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="284dp"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="6dp"
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/Post_Image"
         app:layout_constraintVertical_bias="0.031" />
 
     <EditText
