--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -7,17 +7,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="10dp">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/post_imageList"
             android:layout_width="match_parent"
-            android:layout_height="347dp"
+            android:layout_height="350dp"
             android:adjustViewBounds="true"
-            android:background="#ffffff"
+            android:padding="15dp"
             android:cropToPadding="false"
             android:scaleType="centerCrop"
-            android:src="@mipmap/baseline_add_photo_alternate_black_48" />
+            android:src="@mipmap/baseline_add_photo_alternate_black_48"/>
         
         <TextView
             android:id="@+id/post_titleList"
@@ -30,7 +31,6 @@
 
         <TextView
             android:id="@+id/post_textList"
-
             android:padding="10dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
@@ -41,11 +41,11 @@
 
         <TextView
             android:id="@+id/timestampList"
-            android:padding="5dp"
-            android:textStyle="italic"
-            android:text="Date Created"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Date Created"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
