--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +14,9 @@
         <ImageView
             android:id="@+id/post_imageList"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:padding="15dp"
             android:cropToPadding="false"
