--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="10dp">
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/post_imageList"
@@ -46,7 +46,7 @@
             android:id="@+id/timestampList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="10dp"
             android:text="Date Created"
             android:textStyle="italic" />
 
